onMap z-index fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1263,3 +1263,7 @@ p {
     }
 }
 
+.container.onmapContainer {
+	position: absolute;
+	left: 40px;		
+}
